--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "sequelize": "^4.34.0",
+    "sqlite3": "^3.1.8"
   }
 }
