--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "joi": "^13.3.0",
+    "morgan": "^1.9.0",
+    "sequelize": "^4.37.10",
+    "sqlite3": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
