--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "joi": "^13.3.0",
+    "jsonwebtoken": "^8.2.2",
     "morgan": "^1.9.0",
     "sequelize": "^4.37.10",
     "sqlite3": "^4.0.0"
